--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  
   "name": "webpack",
   "version": "1.0.0",
   "main": "webpack.config.js",
@@ -16,5 +15,9 @@
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
+  },
+  "dependencies": {
+    "css-loader": "^3.5.2",
+    "style-loader": "^1.1.4"
   }
 }
